	  New function parse_browser_input(); changes to do_browser().
	  (DLR)
	- Allow tab completion of directories at the "Go To Directory"
	  prompt.  Changes to do_browser(), do_insertfile(),
	  do_writeout(), cwd_tab_completion(), input_tab(),
	  get_prompt_string(), do_prompt(), search_init(), do_replace(),
	  do_gotolinecolumn(), and do_int_spell_fix. (DLR)
- browser.c:
  do_browser()
	- Properly set currshortcut back to the file browser shortcut
	  list after a "Go To Directory" prompt, and properly restore
	  the file list display after returning from the help browser at
	  the "Go To Directory" prompt. (DLR)
	- Rename variable j to i, for consistency. (DLR)
- chars.c:
  mbstrchr()
	- Make parameter c const. (DLR)
- files.c:
  is_dir()
	- Rename parameter ret to retval, for consistency. (DLR)
- global.c:
  shortcut_init()
	- Remove erroneous handling of the "Get Help" shortcut in the
	  file browser shortcut list. (DLR)
- prompt.c:
  get_prompt_string()
	- Redraw the prompt and set finished to FALSE when NANO_HELP_KEY
	  is pressed, so that we don't leave the prompt, enter the help
	  browser, and restart the prompt after leaving it.  This will
	  properly preserve the cursor position after doing the last of
	  these. (DLR)
- utils.c:
  ngetdelim()
	- Do sanity checks manually again instead of in an assert, and
	  set errno to EINVAL as well as return -1 if they fail.  This
	  matches the manual page. (DLR)
- winio.c:
  parse_kbinput()
	- Interpret Shift-Begin, Shift-Delete, Shift-End, Shift-Home,
	  Shift-Insert, and Shift-Suspend as Begin, Delete, End, Home,
	  Insert, and Suspend, respectively, regardless of whether
	  --rebindkeypad is used. (DLR, found by David Benbennick)
  edit_redraw()
	- If either current or old_current is offscreen, we're not on
	  the first page, and/or we're not on the same page as before,
	  update old_current before scrolling the edit window.  This
	  fixes a potential display problem when a search moves the